# googletest

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  ReadMe.txt  cmake_setup.bash  unix_cmake_setup.bash
cmake/: CodeCoverage.cmake  DownloadProject.CMakeLists.cmake.in  FindAsciiDoctor.cmake  clang-format.cmake  cppcheck.cmake  determine-compiler.cmake  download_googlemock.cmake  downloadproject.cmake  dump_analysis.py  function_add_library.cmake  gmock.cmake  install-configuration.cmake
cmake/compilers/: clang.flags.cmake  gcc.flags.cmake
src/: CMakeLists.txt  main.cpp
src/hw/: CMakeLists.txt
src/hw/spi/: CMakeLists.txt  spidriver.c  spidriver.h
src/hw/uart/: CMakeLists.txt  uartdriver.c  uartdriver.h
src/processing/: CMakeLists.txt  processing.cpp  processing.h
src/ui/: CMakeLists.txt  ui.cpp  ui.h
test/: CMakeLists.txt
test/unittest/: CMakeLists.txt
test/unittest/processing/: CMakeLists.txt  TestProcessing.cpp
